tests/rustdoc-ui/intra-doc/issue-108653-associated-items-5.rs
#![deny(rustdoc::broken_intra_doc_links)]
#![allow(nonstandard_style)]

/// [`u32::MAX`]
//~^ ERROR both an associated constant and a trait
pub mod u32 {
    pub trait MAX {}
}
